syntax = "proto3";
package cluster;
option go_package = "github.com/LilithGames/moxa/cluster";

message Config {
  string node_host_dir = 1;
  string local_storage_dir = 2;
  repeated string member_seed = 3;
  uint64 rtt_millisecond = 4;
  uint64 deployment_id = 5;
  bool enable_metrics = 6;
}
